--- a/app/etc/menuservice.yaml
+++ b/app/etc/menuservice.yaml
@@ -1,3 +1,6 @@
 Name: MenuService
 Host: 0.0.0.0
 Port: 8888
+
+casbin:
+  model: "[request_definition]\nr = sub, obj, act\n[policy_definition]\np = sub, obj, act\n[role_definition]\ng = _, _\n[policy_effect]\ne = some(where (p.eft == allow))\n[matchers]\nm = g(r.sub, p.sub) && r.obj == p.obj && r.act == p.act"
